@@ -1,3 +1,11 @@
+2006-06-27  Sven Panne  <sven.panne@aedion.de>
+
+	* configure.ac, src/Makefile.am, src/backends/alc_backend.c,
+	src/backends/alc_backend.h: Hooked in OSS backend stub, which needs to
+	be filled in later.
+
+	* src/backends/alc_backend_oss.c: Added.
+
 2006-06-26  Sven Panne  <sven.panne@aedion.de>
 
 	* src/backends/alc_backend_alsa.c: Reworked ALSA backend even more,
